--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "unity": "2021.3",
   "displayName": "MeCamShake",
-  "description": "the helpful des \n very use ful",
+  "description": "cinemachine shake",
   "type": "template",
   "author": {
     "name": "meangpu",
